Adăugat dark mode, corecție buguri layout, creeat js

--- a/style.css
+++ b/style.css
@@ -1,74 +1,191 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&family=Roboto+Flex:opsz,wght@8..144,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
 
 
 :root{
-    padding: 1em 1em ;
+    padding: 0 1em ;
     --round : 10px;
     /* background-color: #000; */
-    font-family: 'Roboto Flex', sans-serif;
+    /* font-family: 'Roboto Flex', sans-serif; */
+    /* background-color: #121212; */
+    /* color: rgba(255, 255, 255, 0.41); */
+    font-family: 'IBM Plex Sans', sans-serif;
+    color-scheme: light dark; /* both supported */
+}
+
+html,body{
+    /* margin: 0; */
+    height: 100%;
+    /* background-color: rgba(220, 238, 243, 0.75); */
+  
+}
+
+hr{
+    width: 50%;
+    margin-bottom: 1.5em;
 }
 
 .container{
+    min-height: 100%;
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-row: 1fr 1fr 1fr;
-    gap: 0.5em;
+    grid-template-columns: 1.5fr 2fr;
+    grid-template-rows: auto 1fr auto auto;
+    gap: 0.6em;
     text-align: center;  
+    
 }
 
 
 .header{
-    background-color: aqua;
+    /* margin-top: 20px; */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: rgb(85, 84, 84);
     grid-column: 1/3 ;
     height: 12vh;
-    border-radius: var(--round);
+    /* border-radius: var(--round); */
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* margin-bottom: 0; */
+    
 }
 
 .task-action{
-    background-color: saddlebrown;
+    
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* background-color: rgba(255, 255, 255, 0.12); */
     grid-row: 2/3;
     border-radius: var(--round);
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background-color: rgb(85, 84, 84);
+    /* height: auto; */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    height: max-content;
+    
+   
 }
 
 .task-view{
-    background-color: cornflowerblue;
+    /* background-color: rgba(255, 255, 255, 0.12); */
     border-radius: var(--round);
-    grid-row: 2/3;
-    height: 30vh;
+    grid-row: 2/4;
+    /* height: 100%; */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: rgb(85, 84, 84);
+    height: fit-content;
+    
 }
 
 footer{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     grid-column: 1/3;
-    grid-row: 3/4;
+    grid-row: 4/5;
     height: 10vh;
-    background-color: blueviolet;
+    /* background-color: rgba(255, 255, 255, 0.12); */
     border-radius: var(--round);
     justify-content: center;
     align-items: center;
     display: flex;
+    /* position: static; */
+    margin-top: auto;
+    margin-bottom: 2.5em;
+    background-color: rgb(85, 84, 84);
+    color: #fff;
 }
 
-.task-action > input{
-    width: 60%;
-    margin-bottom: 10px;
+
+
+.task-action > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+    gap: 0;
+    /* flex: 1; */
 }
 
-.task-action > button{
-    width: 50%;
-    height: 10%;
-    margin-bottom: 1em;
+.task-action > div > label{
+    background-color: rgb(51, 49, 49);
+    border: 1px solid rgb(65, 62, 62);
+    /* border-radius: 2px; */
+    /* padding: 5px; */
+    margin-right: 0px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    /* color: rgb(107, 111, 111); */
+    padding: 2px;
+    /* flex: 1; */
+    margin-left: 10px;
+    padding-right: 5px;
+    /* float: left; */
+}
+
+.task-action > div > input {
+    margin: 0;
+    height: 2.2em;
+    /* flex: 1; */
+    border: 0;
+    text-indent: 12px;
     
 }
 
- @media (max-width: 600px) {
+.task-action > div > input:focus {
+   border: 0;
+   height: 2.2em;
+   outline: none;
+}
+
+.task-action > div > button{
+
+    background-color: rgba(42, 111, 239, 0.9);
+    border: 1px solid rgb(75, 131, 235);
+    height: 2.2em;
+    color: aliceblue;
+    margin-left: 0;
+    padding: 3px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    /* flex: 1; */
+}
+
+.task-action > div > button:active{
+    background-color: rgba(42, 111, 239, 0.5);
+    border: 1px solid rgba(75, 131, 235, 0.5);
+}
+
+.task-action > button{
+    /* height: 2.2em; */
+    background-color: rgb(206, 42, 75);
+    color: white;
+    border: 0px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    justify-self: left;
+    /* flex: 1; */
+    margin-top: 20px;
+    width: 290px;
+    height: 25px;
+
+}
+
+.task-action > button:active{
+    background-color: rgba(206, 42, 75, 0.8);
+    color: white;
+}
+
+ @media (max-width: 775px) {
      .container{
          display: flex;
          flex-direction: column;
          animation-delay: 20ms;
+         gap: 1em;
      }
+
+     /* footer{
+         bottom: 0;
+         margin-top: 60%;
+     } */
 }
